GpMessages/19244910544000
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: miércoles, 19 de junio de 2024 16:53:13</msg><msg code="-2147467259" type="100">﻿  File "C:\Users\nicos\Documents\ArcGIS\Packages\DAG_1s2024_L_TRABAJO_1_PARTE_2_NSR_85fdab\commondata\dag_1s2024_l_trabajo_1_parte_2_nsr.gdb\Script1.py", line 36
    arcpy.management.SelectLayerByAttribute(content[1], where_clause = "field_name" = "NULL")
                                                                                    ^
﻿SyntaxError: invalid syntax
</msg><msg code="0" type="0">Failed script Script1...</msg><msg code="-2147467259" type="100">Failed to execute (Script1).</msg><msg code="0" type="3">Failed at miércoles, 19 de junio de 2024 16:53:13 (Elapsed Time: 0,16 seconds)</msg></messages>